Added html code to all html files to prepare for further coding

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
-        <title>Assignment 1</title>
+        <title>Assignment 1: Home</title>
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>ABC Company</h1>
+        <h1>Chateraise</h1>
         <p>
-            aaaaaaaaaa
+            tba
         </p>
     </body>
 </html>
