Moved html files into a folder & added .js file

--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -5,6 +5,11 @@
         <title>Assignment 1: Stores & Contact</title>
         <link href="style.css" rel="stylesheet" type="text/css"></head>
     <body>
-        
+        <h2>Store Locations & Contact</h2>
+        <p>Chateraise Westgate<br>
+            3, Gateway Drive West Gate Singapore B1-24 Singapore 608532<br>
+            10.30am - 10.00pm<br>
+            6252 8525
+            </p>
     </body>
 </html>
