Added working navigation, text & some images

--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,33 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Home</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Chateraise</h1>
-        <p>
-            tba
-        </p>
+        <img src="..\images\Chateraise_logo_online.png">
+        <nav><ul class = "navigation">
+            <li class = "navlist"><a href="index.html">HOME</a></li>
+            <li class = "navlist"><a href="menu.html">MENU</a></li>
+            <li class = "navlist"><a href="about.html">ABOUT</a></li>
+            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+        </ul></nav> 
+
+        <img src="..\images\Châteraise-OnlineBanner-reward2.jpg">
+
+        <p>All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p>
+        
+        <div>
+            <h3>【Seasonal】2024 Japanese Apple and Mikan Fair</h3>
+            <h4>Seasonal Japanese Apple and Mikan is available for a limited time until 30th November!</h4>
+        </div>
+
+        <button>View more ></button>
+
+        <div>
+            <h3>【Limited】Christmas Collection 2024</h3>
+            <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
+        </div>
+
+        <button>View more ></button>
     </body>
 </html>
