--- a/html/menu.html
+++ b/html/menu.html
@@ -3,8 +3,16 @@
     <head><meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Menu</title>
-        <link href="style.css" rel="stylesheet" type="text/css"></head>
+        <link href="../css/style.css" rel="stylesheet" type="text/css"></head>
     <body>
+        <img src="..\images\Chateraise_logo_online.png">
+        <nav><ul class = "navigation">
+            <li class = "navlist"><a href="index.html">HOME</a></li>
+            <li class = "navlist"><a href="menu.html">MENU</a></li>
+            <li class = "navlist"><a href="about.html">ABOUT</a></li>
+            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+        </ul></nav> 
 
+        <img src="..\images\Chateraise_Japanese_Apple_and_Milkan_Fair_Online_Banner.jpg">
     </body>
 </html>
