--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -3,9 +3,19 @@
     <head><meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: Stores & Contact</title>
-        <link href="style.css" rel="stylesheet" type="text/css"></head>
+        <link href="../css/style.css" rel="stylesheet" type="text/css"></head>
     <body>
-        <h2>Store Locations & Contact</h2>
+        <img src="..\images\Chateraise_logo_online.png">
+        <nav><ul class = "navigation">
+            <li class = "navlist"><a href="index.html">HOME</a></li>
+            <li class = "navlist"><a href="menu.html">MENU</a></li>
+            <li class = "navlist"><a href="about.html">ABOUT</a></li>
+            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+        </ul></nav> 
+
+        <div>
+            <h2>Store Locations & Contact</h2>
+        </div>
         <p>Chateraise Westgate<br>
             3, Gateway Drive West Gate Singapore B1-24 Singapore 608532<br>
             10.30am - 10.00pm<br>
