--- a/html/about.html
+++ b/html/about.html
@@ -4,11 +4,42 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width">
         <title>Assignment 1: About</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Chateraise<br> Secret of the taste.</h1>
-        <h3>Let’s have a closer look at the sweets that bring happiness to everyone.</h3>
-        <p>Hakushu mineral water, milk, eggs and seasonal fruits: nature provides such a variety of ingredients to our factory located in the middle of a forest in Yamanashi prefecture.</p>
+        <img src="..\images\Chateraise_logo_online.png">
+        <nav><ul class = "navigation">
+            <li class = "navlist"><a href="index.html">HOME</a></li>
+            <li class = "navlist"><a href="menu.html">MENU</a></li>
+            <li class = "navlist"><a href="about.html">ABOUT</a></li>
+            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+        </ul></nav> 
+
+        <div>
+            <h1>Chateraise<br> Secret of the taste.</h1>
+            <h3>Let’s have a closer look at the sweets that bring happiness to everyone.</h3>
+            <p><strong>Hakushu mineral water, milk, eggs and seasonal fruits: nature provides such a variety of ingredients to our factory located in the middle of a forest in Yamanashi prefecture.</strong></p>
+        </div>
+        <div>
+            <p>Do you know where Châteraisé products are made? This red-roofed building surrounded by lush forest is Chateraise Hakushu Factory. It is here that ice cream, cakes and traditional Japanese sweets are produced, using renowned Hakushu mineral water from the Southern Alps. Besides Hakushu Factory, we also produce Châteraisé products at the Nakamichi and Toyomi Factories – all located in Yamanashi prefecture. It all started back in 1954, when a tiny store called “Amataro” opened in Kofu City. Its signature product, also called amataro, was a sweet made with high quality ingredients such as sugar and azuki beans in “Imagawayaki” (pancake-like patties filled with sweet bean paste). Amataro went on to become a big hit with customers. Since then, the wish to “make truly delicious sweets using natural ingredients to make people happy” has always stayed with us as our number one principle.</p>
+        </div>
+
+        <div>
+            <h1>Chateraise’s Commitment</h1>
+            <h3>The delight of the taste of nature,<br>The delight of thinking about people</h3>
+            <p>Wellbeing of our customers is our priority.That’s why we use more natural ingredients, and offer our products at the most affordable prices.We want to be a confectionery loved by all customers – with this wish in mind, we at Châteraisé are producing our products.</p>
+        </div>
+
+            <h2>Ingredients and production method</h2>
+            <p>The pursuit of tastiness starts with our ingredients.<br>
+                To deliver delicious sweets to our customers,we only use carefully selected, best-quality ingredients.</p>
+            <ul>
+                <li>Fresh milk</li>
+                <li>Fresh eggs</li>
+                <li>Hakushu Meisui mineral water</li>
+                <li>Sweet bean paste made in-house</li>
+                <li>Strawberries direct from farms</li>
+                <li>Couverture chocolate</li>
+            </ul>
     </body>
 </html>
