Styling & more images

--- a/html/index.html
+++ b/html/index.html
@@ -15,22 +15,24 @@
             <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
         </ul></nav> 
 
-        <img src="..\images\Châteraise-OnlineBanner-reward2.jpg">
+        <section>
+            <img class="mainimg" src="..\images\Châteraise-OnlineBanner-reward2.jpg">
 
-        <p>All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p>
-        
-        <div>
-            <h3>【Seasonal】2024 Japanese Apple and Mikan Fair</h3>
-            <h4>Seasonal Japanese Apple and Mikan is available for a limited time until 30th November!</h4>
-        </div>
+            <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p>
 
-        <button>View more ></button>
+            <div class="title">
+                <h3>【Seasonal】2024 Japanese Apple and Mikan Fair</h3>
+                <h4>Seasonal Japanese Apple and Mikan is available for a limited time until 30th November!</h4>
+            </div>
 
-        <div>
-            <h3>【Limited】Christmas Collection 2024</h3>
-            <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
-        </div>
+            <button>View more ></button>
 
-        <button>View more ></button>
+            <div class="title">
+                <h3>【Limited】Christmas Collection 2024</h3>
+                <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
+            </div>
+
+            <button>View more ></button>
+        </section>
     </body>
 </html>
