--- a/html/menu.html
+++ b/html/menu.html
@@ -13,6 +13,37 @@
             <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
         </ul></nav> 
 
-        <img src="..\images\Chateraise_Japanese_Apple_and_Milkan_Fair_Online_Banner.jpg">
+        <img class = "mainimg" src="..\images\Chateraise_Japanese_Apple_and_Milkan_Fair_Online_Banner.jpg">
+        
+        <div class="menutitle">
+            <h3>Japanese Apple & Mikan Fair 2024</h3>
+        </div>
+        <div>
+            <img class="option" src="..\images\JapaneseAppleandMikanTart.jpg">
+            <p>Japanese Apple and Mikan Tart</p>
+            <p>SGD 6.00</p>
+        </div>
+
+        <div class="menutitle">
+            <h3>Christmas Collection 2024</h3>
+        </div>
+        <p>
+
+        </p>
+        
+        <div class="menutitle">
+            <h3>Sliced Cakes</h3>
+        </div>
+        <p>
+
+        </p>
+
+        <div class="menutitle">
+            <h3>Whole Cakes</h3>
+        </div>
+        <p>
+
+        </p>
+
     </body>
 </html>
