--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -13,7 +13,7 @@
             <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
         </ul></nav> 
 
-        <div>
+        <div class="title">
             <h2>Store Locations & Contact</h2>
         </div>
         <p>Chateraise Westgate<br>
