Added items on the menu & stores & contact info

--- a/html/index.html
+++ b/html/index.html
@@ -16,19 +16,53 @@
         </ul></nav> 
 
         <section>
-            <img class="mainimg" src="..\images\Châteraise-OnlineBanner-reward2.jpg">
+            <div><img class="mainimg" src="..\images\Châteraise-OnlineBanner-reward2.jpg">
 
-            <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p>
+            <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p></div>
 
             <div class="title">
-                <h3>【Seasonal】2024 Japanese Apple and Mikan Fair</h3>
+                <h1>【Seasonal】2024 Japanese Apple and Mikan Fair</h1>
+            </div>
+            <div class="title">
                 <h4>Seasonal Japanese Apple and Mikan is available for a limited time until 30th November!</h4>
             </div>
 
-            <button>View more ></button>
+            <section class ="home-container">
+                <button>View more ></button>
+
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="..\images\JapaneseAppleAndMikanTart.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Japanese Apple and MIKAN Tart</p>
+                        <p>SGD 6.00</p>
+                    </div>
+                </div>
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="..\images\JapaneseAppleAndMikanCake.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Japanese Apple and MIKAN Cake</p>
+                        <p>SGD 5.80</p>
+                    </div>
+                </div>
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="..\images\JapaneseAppleAndMikanSquareCake.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Japanese Apple and MIKAN Square Cake</p>
+                        <p>SGD 6.00</p>
+                    </div>
+                </div>
+            </section>
 
             <div class="title">
-                <h3>【Limited】Christmas Collection 2024</h3>
+                <h1>【Limited】Christmas Collection 2024</h1>
+            </div>
+            <div class="title">
                 <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
             </div>
 
