Styled navigation for desktop & mobile

--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -5,13 +5,17 @@
         <title>Assignment 1: Stores & Contact</title>
         <link href="../css/style.css" rel="stylesheet" type="text/css"></head>
     <body>
-        <img src="..\images\Chateraise_logo_online.png">
-        <nav><ul class = "navigation">
-            <li class = "navlist"><a href="index.html">HOME</a></li>
-            <li class = "navlist"><a href="menu.html">MENU</a></li>
-            <li class = "navlist"><a href="about.html">ABOUT</a></li>
-            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
-        </ul></nav> 
+        <div class="logo-nav-container">
+            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <div class="divider-1"></div>
+            <nav><ul class="navigation">
+                <li class="navlist"><a href="index.html">HOME</a></li>
+                <li class="navlist"><a href="menu.html">MENU</a></li>
+                <li class="navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+                <li class="navlist"><a href="about.html">ABOUT</a></li>
+            </ul></nav> 
+            <div class="divider-2"></div>
+        </div>
 
         <section>
             <div class="title">
