--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,17 @@
         <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <img src="..\images\Chateraise_logo_online.png">
-        <nav><ul class = "navigation">
-            <li class = "navlist"><a href="index.html">HOME</a></li>
-            <li class = "navlist"><a href="menu.html">MENU</a></li>
-            <li class = "navlist"><a href="about.html">ABOUT</a></li>
-            <li class = "navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
-        </ul></nav> 
+        <div class="logo-nav-container">
+            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <div class="divider-1"></div>
+            <nav><ul class="navigation">
+                <li class="navlist"><a href="index.html">HOME</a></li>
+                <li class="navlist"><a href="menu.html">MENU</a></li>
+                <li class="navlist"><a href="storesncontact.html">STORES & CONTACT</a></li>
+                <li class="navlist"><a href="about.html">ABOUT</a></li>
+            </ul></nav> 
+            <div class="divider-2"></div>
+        </div>
 
         <section>
             <div><img class="mainimg" src="..\images\Châteraise-OnlineBanner-reward2.jpg">
