Limited time menu items added to homepage

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="logo-nav-container">
-            <img src="..\images\Chateraise_logo_online.png" class="logo">
+            <img src="../images/Chateraise_logo_online.png" class="logo">
             <div class="divider-1"></div>
             <nav><ul class="navigation">
                 <li class="navlist"><a href="index.html">HOME</a></li>
@@ -20,7 +20,7 @@
         </div>
 
         <section>
-            <div><img class="mainimg" src="..\images\Châteraise-OnlineBanner-reward2.jpg">
+            <div><img class="mainimg" src="../images/Châteraise-OnlineBanner-reward2.jpg">
 
             <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p></div>
 
@@ -32,11 +32,15 @@
             </div>
 
             <section class ="home-container">
-                <button>View more ></button>
+                <!-- View More Button -->
+                <div class="view-more-container">
+                    <button>View More ></button>
+                </div>
 
+                <!-- Apple & MIKAN Limited Items -->
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="..\images\JapaneseAppleAndMikanTart.png">
+                        <img src="../images/JapaneseAppleAndMikanTart.png">
                     </div>
                     <div class="flex-info">
                         <p>Japanese Apple and MIKAN Tart</p>
@@ -45,7 +49,7 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="..\images\JapaneseAppleAndMikanCake.png">
+                        <img src="../images/JapaneseAppleAndMikanCake.png">
                     </div>
                     <div class="flex-info">
                         <p>Japanese Apple and MIKAN Cake</p>
@@ -54,7 +58,7 @@
                 </div>
                 <div class="flex-item">
                     <div class="flex-img">
-                        <img src="..\images\JapaneseAppleAndMikanSquareCake.png">
+                        <img src="../images/JapaneseAppleAndMikanSquareCake.png">
                     </div>
                     <div class="flex-info">
                         <p>Japanese Apple and MIKAN Square Cake</p>
@@ -69,8 +73,42 @@
             <div class="title">
                 <h4>Celebrate Christmas with Chateraise!<br>Pre-orders have begun!</h4>
             </div>
+            
+            <section class ="home-container">
+                <!-- View More Button -->
+                <div class="view-more-container">
+                    <button>View More ></button>
+                </div>
 
-            <button>View more ></button>
+                <!-- Christmas Limited Items -->
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="../images/PetitNoelFreshCream.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Petit Noel Fresh Cream</p>
+                        <p>SGD 6.60</p>
+                    </div>
+                </div>
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="../images/SantaClausPresentChocolate.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Santa Claus Present Chocolate</p>
+                        <p>SGD 5.30</p>
+                    </div>
+                </div>
+                <div class="flex-item">
+                    <div class="flex-img">
+                        <img src="../images/PistachioTreeCake.png">
+                    </div>
+                    <div class="flex-info">
+                        <p>Pistachio Tree Cake</p>
+                        <p>SGD 7.20</p>
+                    </div>
+                </div>
+            </section>
         </section>
     </body>
 </html>
