--- a/html/storesncontact.html
+++ b/html/storesncontact.html
@@ -21,226 +21,231 @@
             <div class="title">
                 <h2>Store Locations & Contact</h2>
             </div>
-            <p class="storeinfo">Chateraise Westgate<br>
+            <p class="storeinfo">
+                <strong>Chateriase Westgate</strong><br>
                 3, Gateway Drive West Gate Singapore B1-24 Singapore 608532<br>
                 10.30am - 10.00pm<br>
                 6252 8525
                 </p>
-            <p class="storeinfo">Chateraise Scotts<br>
+            <p class="storeinfo">
+                <strong>Chateraise Scotts</strong><br>
                 350 Orchard Road Shaw House B1F Singapore 238868<br>
                 Sunday - Thursday: 10am - 9.00pm<br>
                 Friday, Saturday, eve of PH: 10am - 9.30pm<br>
                 8280 3594
                 </p>
             <p class="storeinfo">
-                Chateraise Novena Square 2<br>
+                <strong>Chateraise Novena Square 2</strong><br>
                 10 Sinaran Drive #01-36/41 Square 2 Singapore 307506<br>
                 10.00am - 10.00pm<br>
                 6352 7990
             </p>
             <p class="storeinfo">
-                Chateraise Chinatown Point<br>
+                <strong>Chateraise Chinatown Point</strong><br>
                 133 New Bridge Road #1-40 Chinatown Point<br>
                 10.00am - 10.00pm<br>
                 6444 7262
             </p>
             <p class="storeinfo">
-                Chateraise Serangoon Nex<br>
+                <strong>Chateraise Serangoon Nex</strong><br>
                 23 Serangoon Central, Nex, #B2-49A Singapore 556083<br>
                 10.30am - 10.00pm<br>
                 6634 0014
             </p>
             <p class="storeinfo">
-                Chateraise Tampines 1<br>
+                <strong>Chateraise Tampines 1</strong><br>
                 10 Tampines Central 1 #01-60 Singapore 529536<br>
                 10.30am - 10.00pm<br>
                 6509 8803
             </p>
             <p class="storeinfo">
-                Chateraise Hillion Mall<br>
+                <strong>Chateraise Hillion Mall</strong><br>
                 10 Jelebu Rd #B1-44 Singapore 678270<br>
                 10.00am - 10.00pm<br>
                 6266 2056
             </p>
             <p class="storeinfo">
-                Chateraise Toa Payoh HDB Hub<br>
+                <strong>Chateraise Toa Payoh HDB Hub</strong><br>
                 490 Toa Payoh Lorong 6 #01-15, Singapore 310490<br>
                 09.00am - 9.00pm<br>
                 6266 0858
             </p>
             <p class="storeinfo">
-                Chateraise AMK Hub<br>
+                <strong>Chateraise AMK Hub</strong><br>
                 53 Ang Mo Kio Avenue 3 #01-06 Singapore 569933<br>
                 10.30am - 10.00pm<br>
                 6481 3110
             </p>
             <p class="storeinfo">
-                Chateraise Ion Orchard<br>
+                <strong>Chateraise Ion Orchard</strong><br>
                 2 Orchard Turn #B4-45/46 Singapore 238801<br>
                 10.30am - 10.00pm<br>
                 6509 0919
             </p>
             <p class="storeinfo">
-                Chateraise Clementi Mall<br>
+                <strong>Chateraise Clementi Mall</strong><br>
                 #B1-03/04 3155 Commonwealth Avenue West Singapore 129588<br>
                 10.00am - 10.00pm<br>
                 6694 4612
             </p>
             <p class="storeinfo">
-                Chateraise Junction 8<br>
+                <strong>Chateraise Junction 8</strong><br>
                 9 Bishan Place #B1-19B Junction Shopping centre Singapore 579837<br>
                 10.00am - 10.00pm<br>
                 6734 4355
             </p>
             <p class="storeinfo">
-                Chateraise Compass One<br>
+                <strong>Chateraise Compass One</strong><br>
                 No.1 Sengkang Square, Compass One #03-39/40/41 Singapore 545078<br>
                 10.00am - 10.00pm<br>
                 6386 5436
             </p>
             <p class="storeinfo">
-                Chateraise Sun Plaza<br>
+                <strong>Chateraise Sun Plaza</strong><br>
                 30 Sembawang Drive #01-07 Sun Plaza Singapore 757713<br>
                 10.00am - 10.00pm<br>
                 6366 8687
             </p>
             <p class="storeinfo">
-                Chateraise Lot 1<br>
+                <strong>Chateraise Lot 1</strong><br>
                 21 Choa Chu Kang Avenue 4 #B1-15 689812<br>
                 10.30am - 10.00pm<br>
                 6769 0676
             </p>
             <p class="storeinfo">
-                Chateraise Kampung Admiralty<br>
+                <strong>Chateraise Kampung Admiralty</strong><br>
                 676 Woodlands Drive 71 #01-08 730676<br>
                 10.00am - 10.00pm<br>
                 6252 5863
             </p>
             <p class="storeinfo">
-                Chateraise Singpost Centre<br>
-                10, Eunos Road 8 #01-134/135, Singapore Post Centre Singapore 408600<br>
+                <strong>Chateraise Singpost Centre</strong><br>
+                10, Eunos Road 8 #01-134/135, Singapore Post Centre Singapore 408600<br>
                 10.00am - 10.00pm<br>
                 8862 2572
             </p>
             <p class="storeinfo">
-                Chateraise Northpoint City<br>
+                <strong>Chateraise Northpoint City</strong><br>
                 1 Northpoint Drive #01-152 Singapore 768019<br>
                 10.00am - 10.00pm<br>
                 6873 2088
             </p>
             <p class="storeinfo">
-                Chateraise Seletar Mall<br>
+                <strong>Chateraise Seletar Mall</strong><br>
                 33 Sengkang West Ave #B2 19/20 Singapore 797653<br>
                 10.30am - 10.00pm<br>
                 6904 9582
             </p>
             <p class="storeinfo">
-                Chateraise Causeway Point<br>
+                <strong>Chateraise Causeway Point</strong><br>
                 1 Woodlands Square #01/K04 Singapore 738099<br>
                 10.30am - 10.00pm<br>
                 6767 3389
             </p>
             <p class="storeinfo">
-                Chateraise Oasis Terrace<br>
+                <strong>Chateraise Oasis Terrace</strong><br>
                 681 Punggol Drive #02-11 Singapore 820681<br>
                 10.30am - 10.00pm<br>
                 6244 8481
             </p>
             <p class="storeinfo">
-                Chateraise Jurong Point<br>
+                <strong>Chateraise Jurong Point</strong><br>
                 Jurong West Central 2 #B1-21 Jurong Point Shopping Centre SG 648886<br>
                 10.30am - 10.00pm<br>
                 6254 4318
             </p>
             <p class="storeinfo">
-                Chateraise Westmall<br>
+                <strong>Chateraise Westmall</strong><br>
                 1 Bukit Batok Central 2 #01-06, Singapore 658713<br>
                 10.00am - 10.00pm<br>
                 6518 4531
             </p>
             <p class="storeinfo">
-                Chateraise Tiong Bahru<br>
+                <strong>Chateraise Tiong Bahru</strong><br>
                 302 Tiong Bahru Road #B1-127, Singapore 168732<br>
                 10.00am - 10.00pm<br>
                 6970 9818
             </p>
             <p class="storeinfo">
-                Chateraise Bedok Mall<br>
+                <strong>Chateraise Bedok Mall</strong><br>
                 311 New Upper Changi Road #B2-19, Singapore 467360<br>
                 10.30am - 10.00pm<br>
                 6386 0389
             </p>
             <p class="storeinfo">
-                Chateraise Parkway Parade<br>
+                <strong>Chateraise Parkway Parade</strong><br>
                 80 Marine Parade Rd, Parkway Parade, #03-30B, Singapore 449269<br>
                 10.30am - 9.30pm<br>
                 6243 7130
             </p>
             <p class="storeinfo">
-                Chateraise Waterway Point<br>
+                <strong>Chateraise Waterway Point</strong><br>
                 83 Punggol Central, Waterway Point, #B1-01, Singapore 828761<br>
                 10.30am - 10.00pm<br>
                 8288 8033
             </p>
             <p class="storeinfo">
-                Chateraise Hougang Mall<br>
+                <strong>Chateraise Hougang Mall</strong><br>
                 90 Hougang Avenue 10, Hougang Mall, #02-18, Singapore 538766<br>
                 10.00am - 10.00pm<br>
                 6232 7806
             </p>
             <p class="storeinfo">
-                Chateraise Great World<br>
+                <strong>Chateraise Great World</strong><br>
                 1 Kim Seng Promenade #01-116 Singapore 237994<br>
                 10:00am - 10:00pm<br>
                 6365 5366
             </p>
             <p class="storeinfo">
-                Chateraise Thomson301 Upper Thomson Road #01-02, Singapore 574408<br> 
+                <strong>Chateraise Thomson</strong><br>
+                301 Upper Thomson Road #01-02, Singapore 574408<br> 
                 10:00am - 10:00pm<br>
                 6518 9088
             </p>
             <p class="storeinfo">
-                Chateraise Vivocity1 HarbourFront Walk, #02-119 VivoCity, Singapore 098585<br>
+                <strong>Chateraise Vivocity</strong><br>
+                1 HarbourFront Walk, #02-119 VivoCity, Singapore 098585<br>
                 10:00am -10:00pm<br>
                 6530 3660
             </p>
             <p class="storeinfo">
-                Chateraise White Sands#01-26, 1 Pasir Ris Central St 3, Singapore 518457<br>
+                <strong>Chateraise White Sands</strong><br>
+                #01-26, 1 Pasir Ris Central St 3, Singapore 518457<br>
                 10:00a.m.-10:00p.m.<br>
                 6246 9366
             </p>
             <p class="storeinfo">
-                Chateraise Bugis+<br>
+                <strong>Chateraise Bugis+</strong><br>
                 201 Victoria Street #01-07 Singapore 188067<br>
                 10:00a.m.-10:00p.m.<br>
                 6513 9618
             </p>
             <p class="storeinfo">
-                Chateraise Funan Mall<br>
+                <strong>Chateraise Funan Mall</strong><br>
                 107 North Bridge Road #B2-07 Singapore 179105<br>
                 10:00a.m.-10:00p.m.<br>
                 6015 0178
             </p>
             <p class="storeinfo">
-                Chateraise Wisteria Mall<br>
+                <strong>Chateraise Wisteria Mall</strong><br>
                 598 Yishun Ring Road #01-25, Wisteria Mall Singapore 768698<br>
                 10:00a.m.-10:00p.m.<br>
                 6539 9525
             </p>
             <p class="storeinfo">
-                Chateraise Sengkang Grand Mall<br>
+                <strong>Chateraise Sengkang Grand Mall</strong><br>
                 70 Compassvale Bow, Sengkang Grand Mall #01-56, Singapore 544692<br>
                 10:00 a.m.-10:00 p.m.<br>
                 6980 8616
             </p>
             <p class="storeinfo">
-                Chateraise Poiz Centre<br>
+                <strong>Chateraise Poiz Centre</strong><br>
                 51 Upper Serangoon Rd, #01-03 The Poiz Centre, Singapore 347697<br>
                 10:00 a.m.-10:00 p.m.<br>
                 6012 2952
             </p>
             <p class="storeinfo">
-                Chateraise City Square Mall<br>
+                <strong>Chateraise City Square Mall</strong><br>
                 #B2-21A, City Square Mall, 180 Kitchener Road, Singapore 208539<br>
                 10:00 a.m.-10:00 p.m.<br>
                 6929 7051
