Menu styling & flexbox positioning

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
                         <img src="../images/JapaneseAppleAndMikanTart.png">
                     </div>
                     <div class="flex-info">
-                        <p>Japanese Apple and MIKAN Tart</p>
+                        <p class="item-name">Japanese Apple and MIKAN Tart</p>
                         <p>SGD 6.00</p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         <img src="../images/JapaneseAppleAndMikanCake.png">
                     </div>
                     <div class="flex-info">
-                        <p>Japanese Apple and MIKAN Cake</p>
+                        <p class="item-name">Japanese Apple and MIKAN Cake</p>
                         <p>SGD 5.80</p>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <img src="../images/JapaneseAppleAndMikanSquareCake.png">
                     </div>
                     <div class="flex-info">
-                        <p>Japanese Apple and MIKAN Square Cake</p>
+                        <p class="item-name">Japanese Apple and MIKAN Square Cake</p>
                         <p>SGD 6.00</p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <img src="../images/PetitNoelFreshCream.png">
                     </div>
                     <div class="flex-info">
-                        <p>Petit Noel Fresh Cream</p>
+                        <p class="item-name">Petit Noel Fresh Cream</p>
                         <p>SGD 6.60</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         <img src="../images/SantaClausPresentChocolate.png">
                     </div>
                     <div class="flex-info">
-                        <p>Santa Claus Present Chocolate</p>
+                        <p class="item-name">Santa Claus Present Chocolate</p>
                         <p>SGD 5.30</p>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <img src="../images/PistachioTreeCake.png">
                     </div>
                     <div class="flex-info">
-                        <p>Pistachio Tree Cake</p>
+                        <p class="item-name">Pistachio Tree Cake</p>
                         <p>SGD 7.20</p>
                     </div>
                 </div>
