--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
             <section class ="home-container">
                 <!-- View More Button -->
                 <div class="view-more-container">
-                    <button>View More ></button>
+                    <button onclick="viewMore()">View More ></button>
                 </div>
 
                 <!-- Apple & MIKAN Limited Items -->
@@ -77,7 +77,7 @@
             <section class ="home-container">
                 <!-- View More Button -->
                 <div class="view-more-container">
-                    <button>View More ></button>
+                    <button onclick="viewMore()">View More ></button>
                 </div>
 
                 <!-- Christmas Limited Items -->
@@ -110,5 +110,6 @@
                 </div>
             </section>
         </section>
+        <script src="../javascript/javascript.js"></script>
     </body>
 </html>
