Added images to about and menu page, edited README.md

--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,8 @@
         
             <p>Do you know where Châteraisé products are made? This red-roofed building surrounded by lush forest is Chateraise Hakushu Factory. It is here that ice cream, cakes and traditional Japanese sweets are produced, using renowned Hakushu mineral water from the Southern Alps. Besides Hakushu Factory, we also produce Châteraisé products at the Nakamichi and Toyomi Factories – all located in Yamanashi prefecture. It all started back in 1954, when a tiny store called “Amataro” opened in Kofu City. Its signature product, also called amataro, was a sweet made with high quality ingredients such as sugar and azuki beans in “Imagawayaki” (pancake-like patties filled with sweet bean paste). Amataro went on to become a big hit with customers. Since then, the wish to “make truly delicious sweets using natural ingredients to make people happy” has always stayed with us as our number one principle.</p>
 
-            <img src="../images/img-chateraise-shop.jpg">
+            <img src="../images/img-chateraise-shop.jpg" class="about-img">
+            <img src="../images/img-amataro.jpg" class="about-img">
 
             <div class="title">
                 <h1>Chateraise’s Commitment</h1>
@@ -43,8 +44,8 @@
         
         <section class="about-ingre">
             <h2 class="about-ingre">Ingredients and production method</h2>
-            <div class="about-align-text">
-                <p>The pursuit of tastiness starts with our ingredients.<br>
+            <div class="about-ingre-items">
+                <p>The pursuit of tastiness starts with our ingredients.<br><br>
                     To deliver delicious sweets to our customers,we only use carefully selected, best-quality ingredients.</p>
                 <ul>
                     <li>Fresh milk</li>
