--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,10 @@
 
         <section>
             <div><img class="mainimg" src="../images/Châteraise-OnlineBanner-reward2.jpg">
-
-            <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p></div>
+            
+            <div class="notice">
+                <p class="centertext">All of our products contain little to no additives.<br>Please keep refrigerated (frozen for ice cream) if not consumed immediately.</p></div>
+            </div>
 
             <div class="title">
                 <h1>【Seasonal】2024 Japanese Apple and Mikan Fair</h1>
@@ -110,6 +112,6 @@
                 </div>
             </section>
         </section>
-        <script src="../javascript/javascript.js"></script>
+        <script src="../jss/javascript.js"></script>
     </body>
 </html>
