--- a/html/menu.html
+++ b/html/menu.html
@@ -182,6 +182,78 @@
                         <p>SGD 5.10</p>
                     </div>
                 </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/TiramisuMilleCrepe.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Tiramisu Mille Crepe</p>
+                        <p>SGD 5.10</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/GateauChocolate.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Gateau Chocolate</p>
+                        <p>SGD 5.50</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/CutePanda.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Cute Panda</p>
+                        <p>SGD 5.50</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/CuteBunny.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Cute Bunny</p>
+                        <p>SGD 5.50</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/ChocolateBear.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Chocolate Bear</p>
+                        <p>SGD 5.50</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/SmoothSouffleCheeseCake.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Smooth Souffle Cheese Cake</p>
+                        <p>SGD 4.20</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/TiramisuCup.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Tiramisu Cup</p>
+                        <p>SGD 5.90</p>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menu-img">
+                        <img src="../images/JapaneseChestnutMontBlancaIu.jpg">
+                    </div>
+                    <div class="menu-info">
+                        <p class="item-name">Japanese Chestnut Mont Blanc</p>
+                        <p>SGD 10.00</p>
+                    </div>
+                </div>
             </section>
     </section>
     </body>
